fix: corrects stat util spacing

--- a/src/utils/stat/stat.scss
+++ b/src/utils/stat/stat.scss
@@ -18,14 +18,16 @@
   }
 
   .stat-value {
-    font-size: 76px;
+    font-size: 3.8em;
     letter-spacing: -4.75px;
     text-align: center;
     color: #3c3d41;
+    margin-bottom: 25px;
+    margin-top: 20%;
   }
 
   .stat-description {
-    font-size: 17px;
+    font-size: 1em;
     text-align: center;
     color: #656b6f;
     overflow-wrap: break-word;
